--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Hello world</h1>
-    <img src="./img/ファイル名" alt="名前" width="300" height="300">
+    <img src="./img/onepiece06_chopper.png" alt="チョッパー" width="300" height="300">
   </body>
 </html>
